kubernetes/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: postgres 
  labels:
    app: postgres 
  namespace: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres 
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres 
          image: postgres:alpine3.14 
          ports:
            - containerPort: 5432
