kubernetes/nodejs-server-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nodejs-server
  namespace: default-test
spec:
  serviceName: nodejs-server
  selector:
    matchLabels:
      name: nodejs-server
  replicas: 4
  template:
    metadata:
      name: nodejs-server
      labels:
        name: nodejs-server
    spec:
      containers:
        - name: nodejs-server
          image: andylim95/app:latest
          ports:
            - containerPort: 8000
